--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -24,5 +24,11 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
+      - name: Install flake8
+        run: pip install flake8
+
+      - name: Lint with flake8
+        run: flake8 .
+
       - name: Run tests
         run: python -m unittest tests/test_app.py
